# Example-LlamaEdge-RAG

./: Cargo.toml  README.md  bitcoin.txt  curl.md  llama-rag.sh  paris.json  paris.txt
src/: main.rs
