[package]
name = "llama-rag"
version = "0.1.0"
edition = "2021"
authors = ["SecondState Inc."]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.6", features = ["cargo"] }
text-splitter = { version = "0.6.3", features = ["tiktoken-rs"] }
tiktoken-rs = "0.5.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
endpoints = "^0.5"
chat-prompts = "^0.5"
futures = "0.3"
futures-util = "0.3"
bytes = "1.5.0"
